kub/cast-service/cast-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-db
  namespace: dev
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: cast-db
  clusterIP: None
