kub/cast-service/cast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-service
  namespace: dev
spec:
  selector:
    app: cast-service
  ports:
    - port: 80
      targetPort: 8000
