kub/cast-service/cast-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cast-ingress
  namespace: dev
spec:
  rules:
    - host: datascientestcours.cloudns.ch
      http:
        paths:
          - path: /api/v1/casts
            pathType: Prefix
            backend:
              service:
                name: cast-service
                port:
                  number: 80
